Fixed spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -85,7 +85,7 @@ h3 {
   margin-left: auto;
   margin-right: auto;
   width: 100%;
-  height: auto;
+  height: 8.1%;
   margin-bottom: 7%;
   margin-top: 7%;
 }
